crates/flow-rewrite/tests/snapshots/golden__seq_demo_report.snap
---
source: crates/flow-rewrite/tests/golden.rs
expression: "format!(\"{:#?}\", res.report)"
---
RewriteReport {
    rounds: 2,
    applied: [
        (
            Inline,
            2,
        ),
        (
            ConstFold,
            2,
        ),
    ],
    skipped_non_canonical: false,
}
