crates/flow-rewrite/tests/snapshots/golden__vector_add_report.snap
---
source: crates/flow-rewrite/tests/golden.rs
expression: "format!(\"{:#?}\", res.report)"
---
RewriteReport {
    rounds: 2,
    applied: [
        (
            ConstFold,
            2,
        ),
        (
            Dce,
            1,
        ),
    ],
    skipped_non_canonical: false,
}
